# DualRip

./: .gitattributes  .gitignore  DualRip.py  README.md  build_exe.bat  build_linux.sh  build_macos.sh  dualrip.spec  dualrip_linux.spec  dualrip_macos.spec  pyproject.toml  requirements.txt
.github/workflows/: build.yml  ci.yml  release.yml
dualrip/: __init__.py  bankmap.py  cli.py  cprims.py  export.py  tables.py
dualrip/engine/: channel.py  render.py  sequencer.py
dualrip/engine/ctr/: __init__.py  channel.py  cprims.py  render.py  sequencer.py
dualrip/engine/sdat/: channel.py  cprims.py  render.py  sequencer.py  tables.py
dualrip/formats/: common.py  rom.py  sbnk.py  sdat.py  swar.py
dualrip/formats/ctr/: __init__.py  archive.py  csar.py  cseq.py  cstm.py  cwsd.py  rom.py
dualrip/formats/nds/: rom.py  swar.py
dualrip/formats/sdat/: __init__.py  common.py  rom.py  sbnk.py  sdat.py  swar.py
dualrip/gui/: app.py  audio.py  dialogs.py  main_window.py  player.py  workers.py
tests/: test_golden.py  test_units.py
